--- a/app/src/main/res/layout/dialog_add_group.xml
+++ b/app/src/main/res/layout/dialog_add_group.xml
@@ -143,71 +143,7 @@
                         android:imeOptions="actionDone"/>
 
                 </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="11dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp">
 
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:textSize="15sp"
-                        android:textColor="@android:color/black"
-                        android:text="银行卡佣金" />
-                    <EditText
-                        android:inputType="text"
-                        android:id="@+id/text1"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginStart="15dp"
-                        android:background="@drawable/bg_grey"
-                        android:ellipsize="end"
-                        android:hint=""
-                        android:paddingStart="10dp"
-                        android:textSize="15sp"
-                        android:imeOptions="actionDone"/>
-
-
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="11dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp">
-
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:textSize="15sp"
-                        android:textColor="@android:color/black"
-                        android:text="小额买币" />
-
-
-                    <EditText
-                        android:inputType="text"
-                        android:id="@+id/text2"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginStart="15dp"
-                        android:background="@drawable/bg_grey"
-                        android:ellipsize="end"
-                        android:hint=""
-                        android:paddingStart="10dp"
-                        android:textSize="15sp"
-                        android:imeOptions="actionDone"/>
-
-                </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
@@ -259,6 +195,42 @@
                         android:gravity="center"
                         android:textSize="15sp"
                         android:textColor="@android:color/black"
+                        android:text="小额支付宝卖币佣金" />
+
+
+                    <EditText
+                        android:inputType="text"
+                        android:id="@+id/alipayRebateXe"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="15dp"
+                        android:background="@drawable/bg_grey"
+                        android:ellipsize="end"
+                        android:hint=""
+                        android:paddingStart="10dp"
+                        android:textSize="15sp"
+                        android:imeOptions="actionDone"/>
+
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="11dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp">
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textSize="15sp"
+                        android:textColor="@android:color/black"
                         android:text="微信卖币佣金" />
 
 
@@ -278,6 +250,42 @@
 
 
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="11dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp">
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textSize="15sp"
+                        android:textColor="@android:color/black"
+                        android:text="小额微信卖币佣金" />
+
+
+                    <EditText
+                        android:inputType="text"
+                        android:id="@+id/wechatxetext"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="15dp"
+                        android:background="@drawable/bg_grey"
+                        android:ellipsize="end"
+                        android:hint=""
+                        android:paddingStart="10dp"
+                        android:textSize="15sp"
+                        android:imeOptions="actionDone"/>
+
+
+
+                </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
@@ -346,6 +354,71 @@
                         android:imeOptions="actionDone"/>
 
 
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="11dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp">
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textSize="15sp"
+                        android:textColor="@android:color/black"
+                        android:text="银行卡佣金" />
+                    <EditText
+                        android:inputType="text"
+                        android:id="@+id/text1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="15dp"
+                        android:background="@drawable/bg_grey"
+                        android:ellipsize="end"
+                        android:hint=""
+                        android:paddingStart="10dp"
+                        android:textSize="15sp"
+                        android:imeOptions="actionDone"/>
+
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="11dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp">
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textSize="15sp"
+                        android:textColor="@android:color/black"
+                        android:text="小额买币" />
+
+
+                    <EditText
+                        android:inputType="text"
+                        android:id="@+id/text2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="15dp"
+                        android:background="@drawable/bg_grey"
+                        android:ellipsize="end"
+                        android:hint=""
+                        android:paddingStart="10dp"
+                        android:textSize="15sp"
+                        android:imeOptions="actionDone"/>
 
                 </LinearLayout>
                 <LinearLayout
