--- a/app/src/main/res/layout/activity_main22.xml
+++ b/app/src/main/res/layout/activity_main22.xml
@@ -297,6 +297,25 @@
             android:layout_marginTop="11dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp">
+            <Switch
+                android:id="@+id/switchbutton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="是否只用于小额收款" />
+
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_marginTop="11dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp">
 
 
             <TextView
