--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -187,7 +187,8 @@
 
             </LinearLayout>
             <LinearLayout
-                android:visibility="gone"
+                android:id="@+id/newlayout"
+                android:visibility="visible"
                 android:layout_marginTop="12dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
