--- a/app/src/main/res/layout/buy_money.xml
+++ b/app/src/main/res/layout/buy_money.xml
@@ -190,6 +190,7 @@
                 android:text="请输入实际到账数字" />
 
             <EditText
+                android:digits="1234567890"
                 android:id="@+id/payedt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -233,6 +234,39 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_marginTop="11dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp">
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="15sp"
+                android:textColor="@android:color/black"
+                android:text="请输入哈希值" />
+
+            <EditText
+                android:digits="1234567890"
+                android:id="@+id/hashvedt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="15dp"
+                android:background="@drawable/bg_grey"
+                android:ellipsize="end"
+                android:hint=""
+                android:paddingStart="10dp"
+                android:textSize="15sp"
+                android:imeOptions="actionDone"/>
+
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
