--- a/app/src/main/res/layout/buy_money.xml
+++ b/app/src/main/res/layout/buy_money.xml
@@ -81,7 +81,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="15sp"
                     android:textColor="@android:color/black"
-                    android:text="TWpAWZHN4Gbz6oDb8sVMppNp61xxxxxxxxx" />
+                    android:text="" />
 
 
                 <!--                <EditText-->
@@ -187,17 +187,16 @@
                 android:gravity="center"
                 android:textSize="15sp"
                 android:textColor="@android:color/black"
-                android:text="请输入实际到账数字" />
+                android:text="实际到账金额 (USDT)" />
 
             <EditText
-                android:digits="1234567890"
                 android:id="@+id/payedt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="15dp"
                 android:background="@drawable/bg_grey"
                 android:ellipsize="end"
-                android:hint=""
+                android:hint="请输入实际到账金额"
                 android:paddingStart="10dp"
                 android:textSize="15sp"
                 android:imeOptions="actionDone"/>
@@ -220,7 +219,7 @@
                 android:gravity="center"
                 android:textSize="15sp"
                 android:textColor="@android:color/black"
-                android:text="参考价格" />
+                android:text="汇率：\t\t\t\t\t\t\t\t\t\t\t\t" />
 
             <TextView
                 android:id="@+id/monytttext"
@@ -229,7 +228,36 @@
                 android:gravity="center"
                 android:textSize="15sp"
                 android:textColor="@android:color/black"
-                android:text="参考价格" />
+                android:text="0" />
+
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_marginTop="11dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp">
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="15sp"
+                android:textColor="@android:color/black"
+                android:text="实际到账金额 (CNY)" />
+
+            <TextView
+                android:id="@+id/monytttext2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_horizontal"
+                android:textSize="15sp"
+                android:textColor="@android:color/black"
+                android:text="0" />
 
 
         </LinearLayout>
@@ -250,17 +278,16 @@
                 android:gravity="center"
                 android:textSize="15sp"
                 android:textColor="@android:color/black"
-                android:text="请输入哈希值" />
+                android:text="哈希值 (或交易号)" />
 
             <EditText
-                android:digits="1234567890"
                 android:id="@+id/hashvedt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="15dp"
                 android:background="@drawable/bg_grey"
                 android:ellipsize="end"
-                android:hint=""
+                android:hint="请输入哈希值 (或交易号)"
                 android:paddingStart="10dp"
                 android:textSize="15sp"
                 android:imeOptions="actionDone"/>
