--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -132,16 +132,16 @@
             android:text="登入"
             android:textSize="16sp"
             ></Button>
-        <TextView
+        <Button
+            android:layout_centerHorizontal="true"
             android:id="@+id/vertext"
-            android:gravity="center"
             android:layout_below="@+id/loginbtn"
-            android:layout_marginTop="60dp"
-            android:layout_width="match_parent"
+            android:layout_marginTop="90dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="閃退查詢"
             android:textSize="16sp"
-            ></TextView>
+            ></Button>
     </RelativeLayout>
 
 
