--- a/app/src/main/res/layout/add_tobank_card.xml
+++ b/app/src/main/res/layout/add_tobank_card.xml
@@ -266,6 +266,58 @@
                 android:imeOptions="actionDone"/>
 
         </LinearLayout>
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_marginTop="11dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp">
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="15sp"
+                android:textColor="@android:color/black"
+                android:text="单笔限額" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:orientation="horizontal">
+            <EditText
+                android:layout_weight="1"
+                android:layout_marginStart="20dp"
+                android:id="@+id/minAmountedt"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@drawable/bg_grey"
+                android:ellipsize="end"
+                android:hint="预设100"
+                android:textSize="15sp"
+                android:inputType="number"
+                android:digits="1234567890"
+                android:imeOptions="actionDone"/>
+
+                <EditText
+                    android:layout_marginLeft="12dp"
+                    android:layout_weight="1"
+                    android:layout_alignParentRight="true"
+                    android:id="@+id/maxAmountedt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/bg_grey"
+                    android:ellipsize="end"
+                    android:hint="预设20000"
+                    android:textSize="15sp"
+                    android:inputType="number"
+                    android:digits="1234567890"
+                    android:imeOptions="actionDone"/>
+            </LinearLayout>
+        </LinearLayout>
 
 
 
