--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -131,15 +131,27 @@
             android:layout_height="wrap_content"
             android:text="登入"
             android:textSize="16sp"
+            android:layout_marginBottom="8dp"
             ></Button>
         <Button
             android:layout_centerHorizontal="true"
             android:id="@+id/vertext"
             android:layout_below="@+id/loginbtn"
-            android:layout_marginTop="90dp"
+            android:layout_marginTop="96dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="閃退查詢"
+            android:textSize="16sp"
+            ></Button>
+
+        <Button
+            android:layout_marginTop="4dp"
+            android:layout_below="@+id/vertext"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/netcheck"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="网路检查"
             android:textSize="16sp"
             ></Button>
     </RelativeLayout>
